--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>website</title>
-    <h1>{{ headline }}</h1>
+    <title> COVID-19 Tracker </title>
+    <h1>{{heading}}</h1>
+    <style> {
+      text-align: center;
+    }
   </head>
   <body>
+    <div>
+    {{ graph }}
+    </div>
   </body>
 </html>
